<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <!-- 앱 이름 -->
    <string name="app_name">Daegawon</string>

    <!-- 관리자 페이지 -->
    <string name="text_wait">예약 대기</string>
    <string name="text_count">순번</string>
    <string name="text_wait_count">대기 번호</string>
    <string name="text_people">인원</string>
    <string name="text_phone">뒷자리</string>
    <string name="text_date">예약일자</string>
    <string name="text_name">이름</string>
    <string name="text_room">방번호</string>
    <string name="text_call">호출</string>
    <string name="text_reserve">예약</string>

    <!-- 관리자 선택 페이지 -->
    <string name="text_wait_list">예약 대기 확인\n</string>
    <string name="text_create">예약 추가 및 호출\n</string>

    <!-- 관리자 팝업 페이지 -->
    <string name="text_phone_popup">전화번호</string>
    <string name="text_phone_clear">C</string>
    <string name="text_time_popup">시간</string>
    <string name="text_year">년</string>
    <string name="text_month">월</string>
    <string name="text_day">일</string>
    <string name="text_time">시</string>
    <string name="text_people_default">1명</string>
    <string name="text_up">▲</string>
    <string name="text_down">▼</string>
    <string name="text_seat">좌석</string>
    <string name="text_seat_floor">층</string>
    <string name="text_seat_room">호</string>
    <string name="text_register">등록</string>

    <!-- 선택 페이지 -->

    <!-- 정보 페이지 -->

    <!-- 로딩 페이지 -->

    <!-- 로그인 페이지 -->
    <string name="text_logout">로그아웃</string>
    <!-- 메인 페이지 -->

    <!-- 팝업 페이지 -->

    <!-- 좌석 페이지 -->

    <!-- 안내 메세지 -->
    <string name="info_reset">대기번호 초기화 완료.</string>
    <string name="info_logout">정말 로그아웃 하시겠습니까?</string>
    <string name="info_back">뒤로가기 버튼을 한번 더 누르면 종료합니다.</string>

    <!-- 오류 메세지 -->
    <string name="error_key">key값 오류 입니다.</string>
    <string name="error_net">통신에 문제가 발생하였습니다.</string>
    <string name="error_idpw_null">ID와 비밀번호를 입력해주세요.</string>
    <string name="error_no_idpw">존재하지 않는 ID이거나, 비밀번호가 틀렸습니다.</string>
    <string name="error_num">num값 오류 입니다.</string>
</resources>