<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="600dp"
    android:layout_height="400dp"
    android:background="@drawable/background1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:weightSum="8">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="예약 등록"
                android:textColor="#000000"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btn_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_close"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:drawable/ic_menu_close_clear_cancel"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/text_name"
                android:textColor="@color/colorBlack"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/input_name"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:backgroundTint="@color/colorBlack"
                android:ems="10"
                android:inputType="text"
                android:maxLength="10"
                android:singleLine="false"
                android:textColor="@color/colorBlack"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/text_phone"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/text_phone_popup"
                android:textColor="@color/colorBlack"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:backgroundTint="@color/colorBlack"
                android:ems="10"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/colorBlack"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/text_time_popup"
                android:layout_width="117dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/text_time_popup"
                android:textColor="@color/colorBlack"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/input_date"
                android:layout_width="265dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date"
                android:textSize="24sp" />

            <Button
                android:id="@+id/picker"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/background1"
                android:text="시간선택" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/text_people"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/text_people"
                android:textColor="@color/colorBlack"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/input_person"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/text_people_default"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_up"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/background1"
                android:text="@string/text_up"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_down"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/background1"
                android:text="@string/text_down"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/text_seat"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/text_seat"
                android:textColor="@color/colorBlack"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/spinner"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal|center_vertical"
                android:scrollbarSize="4dp"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/floor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="층
"
                android:textColor="@color/colorBlack"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal|center_vertical" />

            <TextView
                android:id="@+id/seat10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="호"
                android:textColor="@color/colorBlack"
                android:textSize="24sp" />

            <Button
                android:id="@+id/pickerseat"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:background="#FFE600"
                android:text="좌석현황"
                android:visibility="gone" />

            <Button
                android:id="@+id/seatchoice"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="7.5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/background1"
                android:text="지정" />
            <!--                android:background="#FFE600"-->

            <Button
                android:id="@+id/seatdelete"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="7.5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/background1"
                android:text="삭제" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7.8"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="선택좌석"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/seatselect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.2"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:text="@string/text_register"
                android:textColor="#000000"
                android:textSize="40sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>